Added titles and conclusion

--- a/eat.Rmd
+++ b/eat.Rmd
@@ -32,6 +32,7 @@ mydata <- select(GSS,race,age,eatout)
 mydata <- na.omit(mydata)
 ```
 
+### Graphical Results
 
 ```{r}
 barchartGC(~race + eatout,data=mydata)
@@ -41,7 +42,7 @@ barchartGC(~race + eatout,data=mydata, type="percent")
   
 Based on the above data, we can see that roughly 960 white people eat out, while 200 white people opt to stay home. As for black people, 200 decide to eat out while 100 stay in. As for the other races, around 100 people will eat out while 50 stay in. Percentage wise, this would mean roughly 80% of white people eat out while the rest stay in, and about 70% of black people and other races go out and 20% stay in.  
 
-
+### Numerical Summary
 
 ```{r}
 table1 <- xtabs(~race + eatout,data=mydata)
@@ -51,6 +52,8 @@ colPerc(table1)
   
 Based on the numerical summaries with the accurate numerical data, we can see that 83.13% of white people eat out while 16.87% stay in, 69.19% of black people eat out and 30.81% stay in, and 72.12% of all other races eat out while 27.88% stay in. This shows that black people and other races are slightly less likely to eat out in comparison to white people. Black people and other races show similar rates of eating out. Additionally, the table above shows that white people where among the majority who stated they eat out. Out of all the people that said yes to eating out, 81.69% were white, 11.83% were black, and 6.48% were of another race. 
 
+
+### Inferential Results
 
 ```{r}
 chisq.test(table1)
@@ -65,3 +68,7 @@ fisherXY(mydata$race,mydata$eatout, printAll = TRUE)
 ```
 
 Based on the test above (this test compares two groups at one time), we can clearly see that there is a difference in the frequency white and black people eat out. This is shown by the very low p-value 1.183e-05. In the same way, there is a difference in the frequency that white people eat out in comparison to those of other races. This is exemplified by the low p-value of 0.00721. Furthermore, this test also shows that there is little to no difference in the frequency that black people and those of other races eat out. This is shown by the p-value of 0.599.
+
+### Discussion and Conclusion
+  
+The question we were presented with was whether or not there is a difference between the frequency of eating out between racial groups. Based on the graphical, numerical, and inferential results we can conclude that there is a difference between the frequency in which different races eat out. White people tend to eat out more than black people and those of other races. However, black people and other races tend to eat out around the same amount. 
